11/6/2023
    - Change function getRecipes to handle recipe links where the recipe name is
      split between multiple <a> elements.  Also consolidate duplicate href
      checking and consolidate examination of h2 and h3 element checking for
      recipes.
    - Replace ipcMain.on with ipcMain.once in functions processSelectedArticles, 
      processNewDays, createButton, getAction and addArticles.

10/31/2023
    Change function getRecipes to return the expression 'recipeList.length > 0',
    instead of returning a boolean set during the function's processing to avoid
    returning a spurious 'true' values.

10/26/2023
    - Node Intregration disabled and Context Isolation enabled in all renderers.
    - Javascript Standard Style enforced.

9/7/2023
    In current-renderer.js, function getTitle:
        - Handle multiple <a> elements (recipes) within an <h2> element. 

10/15/2021
    In current-renderer.js, function getTitle:
        - Change handling of title decoration
        - Accecpt 'Pairing:' or 'Pairings:' as an indicator or recipe links
    In current-renderer.js, function dayCompare:
        - When comparing row text, remove <br> elements in addition to whitespace
    

10/13/2021
    Merge Epochs branch to master

05/18/2021
    Change the minimum valid date for the dateSpec date-picker in current.html
    to 2018-02-04.  The format of the Today's Paper article lists changed on 
    2018-02-04, and the code in the sectionScrape function does not work on 
    the earlier format.
    - Change current-renderer.js to remove the statements that read the NYT Recipes 
        directory to find the earliest year.  Set dateSpec.min to '2018-02-04'.

02/24/2021
    Consolidate Cheerio HTML loads and check for duplicate recipe links in an article
    - Updated current-renderer.js function artScrape to load article page HTML into a Cheerio object and
        pass that object to subfunctions getTitle and getRecipe, instead of passing the article page HTML